tree-sitter-gossamer/grammar.js
    source_file: $ => repeat($._statement),

    _item: $ => choice(
      $.use_declaration,
      $.const_item,
      $.static_item,
      $.struct_item,
      $.enum_item,
      $.trait_item,
      $.impl_item,
      $.function_item,
      $.attribute_item,
      $.mod_item,
      $.type_item,
      $.extern_item,
    ),

    attribute_item: $ => seq(
      choice("#", "#!"),
      "[",
      $._token_tree,
      "]",
    ),

    _token_tree: $ => repeat1(choice(
      /[^\[\](){}]+/,
      seq("[", $._token_tree, "]"),
      seq("(", $._token_tree, ")"),
      seq("{", $._token_tree, "}"),
    )),

    _path: $ => seq(
      $._path_segment_with_generics,
      repeat(seq("::", $._path_segment_with_generics)),
    ),

    enum_item: $ => seq(
      optional("pub"),
      "enum",
      field("name", $.type_identifier),
      optional($.type_parameters),
      optional(seq("where", commaSep1($.where_clause))),
      "{",
      commaSep($.enum_variant),
      "}",
    ),

    enum_variant: $ => seq(
      repeat($.attribute_item),
      field("name", $.type_identifier),
      optional(choice(
        seq("(", commaSep($.tuple_field_declaration), ")"),
        seq("{", commaSep($.field_declaration), "}"),
      )),
      optional(seq("=", $._expression)),
    ),

    tuple_field_declaration: $ => seq(
      repeat($.attribute_item),
      optional("pub"),
      field("type", $._type),
    ),

    trait_item: $ => seq(
      optional("pub"),
      "trait",
      field("name", $.type_identifier),
      optional($.type_parameters),
      optional(seq(":", $._type, repeat(seq("+", $._type)))),
      optional(seq("where", commaSep1($.where_clause))),
      $.declaration_block,
    ),

    declaration_block: $ => seq(
      "{",
      repeat(choice($._item, $.associated_type_item, $.associated_const_item)),
      "}",
    ),

    function_item: $ => prec.right(seq(
      optional("pub"),
      optional("comptime"),
      optional("unsafe"),
      "fn",
      field("name", $.identifier),
      optional($.type_parameters),
      field("parameters", $.parameters),
      optional(seq("->", field("return_type", $._type))),
      optional(seq("where", commaSep1($.where_clause))),
      optional(choice($.block, ";")),
    )),

    parameters: $ => seq(
      "(",
      commaSep(choice(
        seq(optional("&"), optional("mut"), "self"),
        $.parameter,
      )),
      ")",
    ),

    parameter: $ => seq(
      optional("comptime"),
      field("pattern", $._pattern),
      ":",
      field("type", $._type),
    ),

    block: $ => seq(
      "{",
      repeat($._statement),
      optional($._expression),
      "}",
    ),

    _statement: $ => choice(
      $.let_declaration,
      $.arena_block,
      $._item,
      prec.right(seq($._expression, optional(";"))),
      ";",
    ),

    // `arena` is contextual: statement-position `arena { ... }` frees
    // allocations made inside the block when it exits.
    arena_block: $ => seq("arena", $.block),

    let_declaration: $ => prec.right(seq(
      "let",
      field("pattern", $._pattern),
      optional(seq(":", field("type", $._type))),
      optional(seq("=", field("value", $._expression))),
      optional(seq("else", field("alternative", $.block))),
      optional(";"),
    )),

    _pattern: $ => choice(
      $.literal,
      $.tuple_pattern,
      $.slice_pattern,
      $.struct_pattern,
      $.tuple_struct_pattern,
      $.reference_pattern,
      $.range_pattern,
      $.or_pattern,
      $.captured_pattern,
      $.mut_pattern,
      "_",
      $._path,
    ),

    // Prec -1: `&mut x` is a mutable reference pattern, not `&(mut x)`.
    mut_pattern: $ => prec(-1, seq("mut", $.identifier)),

    tuple_pattern: $ => seq("(", commaSep(choice($._pattern, "..")), ")"),

    tuple_struct_pattern: $ => seq(
      $._path,
      "(",
      commaSep(choice($._pattern, "..")),
      ")",
    ),

    _type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.reference_type,
      $.tuple_type,
      $.array_type,
      $.function_type,
      $._path,
      $.type_identifier,
      "!",
      "_",
    ),

    primitive_type: _ => choice(...primitive_types),

    type_identifier: _ => /[\p{Lu}][\p{XID_Continue}]*/,

    generic_type: $ => prec(1, seq(
      choice($.type_identifier, $._path),
      "<",
      commaSep1($._generic_arg),
      ">",
    )),

    reference_type: $ => seq("&", optional("mut"), $._type),

    tuple_type: $ => seq("(", commaSep($._type), ")"),

    function_type: $ => prec(1, seq(
      choice("fn", $.type_identifier),
      "(",
      commaSep($._type),
      ")",
      optional(seq("->", $._type)),
    )),

    _generic_arg: $ => choice($._type, $.integer_literal, $.float_literal, $.boolean_literal),

    _expression: $ => choice(
      $.literal,
      $._path,
      $.unary_expression,
      $.binary_expression,
      $.pipe_expression,
      $.assignment_expression,
      $.call_expression,
      $.generic_function,
      $.macro_invocation,
      $.cast_expression,
      $.try_expression,
      $.field_expression,
      $.method_call_expression,
      $.index_expression,
      $.reference_expression,
      $.range_expression,
      $.tuple_expression,
      $.array_expression,
      $.struct_expression,
      $.if_expression,
      $.match_expression,
      $.loop_expression,
      $.while_expression,
      $.for_expression,
      $.return_expression,
      $.break_expression,
      $.continue_expression,
      $.go_expression,
      $.defer_expression,
      $.select_expression,
      $.closure_expression,
      $.unsafe_expression,
      $.comptime_expression,
      $.labelled_loop_expression,
      $.reserved_keyword,
      $.parenthesized_expression,
      $.block,
    ),

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.raw_string_literal,
      $.raw_byte_string_literal,
      $.byte_string_literal,
      $.byte_literal,
      $.char_literal,
      $.boolean_literal,
    ),

    integer_literal: _ => token(seq(
      choice(
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
        /[0-9][0-9_]*/,
      ),
      optional(choice(...integer_types)),
    )),

    float_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*\.[0-9_]+([eE][+-]?[0-9_]+)?/,
        /[0-9][0-9_]*[eE][+-]?[0-9_]+/,
        /\.[0-9_]+([eE][+-]?[0-9_]+)?/,
      ),
      optional(choice(...float_types)),
    )),

    string_literal: _ => token(seq(
      '"',
      repeat(choice(/[^"\\]/, /\\([nrt0\\"']|x[0-9a-fA-F]{2}|u\{[0-9a-fA-F]+\})/)),
      '"',
    )),

    identifier: _ => /[_\p{XID_Start}][\p{XID_Continue}]*/,

    reference_expression: $ => prec(PREC.unary, seq(
      "&",
      optional("mut"),
      $._expression,
    )),

    binary_expression: $ => {
      const table = [
        [PREC.multiplicative, choice("*", "/", "%")],
        [PREC.additive, choice("+", "-")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.bitand, "&"],
        [PREC.bitxor, "^"],
        [PREC.bitor, "|"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.and, "&&"],
        [PREC.or, "||"],
      ];

      return choice(...table.map(([prec_, op]) =>
        prec.left(prec_, seq($._expression, op, $._expression)),
      ));
    },

    call_expression: $ => prec(PREC.postfix, seq(
      field("function", choice(
        $._path,
        $.field_expression,
        $.method_call_expression,
        $.generic_function,
        $.parenthesized_expression,
      )),
      field("arguments", seq("(", commaSep(choice($._expression, $.spread_argument)), ")")),
    )),

    macro_invocation: $ => seq(
      field("macro", $.identifier),
      token.immediate("!"),
      choice(
        seq("(", commaSep($._expression), ")"),
        seq("[", choice(
          commaSep($._expression),
          seq($._expression, ";", $._expression),
        ), "]"),
      ),
    ),

    cast_expression: $ => prec.left(PREC.cast, seq($._expression, "as", field("type", $._type))),

    try_expression: $ => prec(PREC.postfix, seq($._expression, "?")),

    method_call_expression: $ => prec(14, seq(
      $._expression,
      ".",
      choice($.identifier, "await"),
      optional(seq("::<", commaSep1($._generic_arg), ">")),
      "(",
      commaSep(choice($._expression, $.spread_argument)),
      ")",
    )),

    tuple_expression: $ => choice(
      seq("(", ")"),
      seq("(", $._expression, ",", commaSep($._expression), ")"),
    ),

    if_expression: $ => prec.right(seq(
      "if",
      field("condition", choice($.let_chain_condition, $.let_condition, $._expression)),
      field("consequence", $.block),
      optional(seq("else", choice($.block, $.if_expression))),
    )),

    let_condition: $ => seq(
      "let",
      field("pattern", $._pattern),
      "=",
      field("value", $._condition_operand),
    ),

    _condition_operand: $ => prec(2, choice(
      $.literal,
      $._path,
      $.call_expression,
      $.generic_function,
      $.macro_invocation,
      $.try_expression,
      $.field_expression,
      $.method_call_expression,
      $.index_expression,
      $.reference_expression,
      $.tuple_expression,
      $.array_expression,
      $.parenthesized_expression,
    )),

    while_expression: $ => seq(
      "while",
      field("condition", choice($.let_chain_condition, $.let_condition, $._expression)),
      $.block,
    ),

    return_expression: $ => prec.right(seq("return", optional($._expression))),

    closure_expression: $ => choice(
      prec.right(PREC.closure, seq(
        field("parameters", $.closure_parameters),
        optional(seq("->", field("return_type", $._type))),
        field("body", $._expression),
      )),
      seq(
        "fn",
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $._type))),
        field("body", $.block),
      ),
    ),

    closure_parameters: $ => choice(
      "||",
      seq("|", commaSep($.closure_parameter), "|"),
    ),

    // Or-patterns are excluded: a bare `|` closes the parameter list.
    closure_parameter: $ => seq(
      field("pattern", choice(
        $.tuple_pattern,
        $.reference_pattern,
        "_",
        $.identifier,
      )),
      optional(seq(":", field("type", $._type))),
    ),
  },
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)), optional(","));
}
